docs/apache-airflow-providers-datadog/3.8.2/_sources/_api/airflow/providers/datadog/hooks/datadog/index.rst.txt
airflow.providers.datadog.hooks.datadog
=======================================

.. py:module:: airflow.providers.datadog.hooks.datadog


Classes
-------

.. autoapisummary::

   airflow.providers.datadog.hooks.datadog.DatadogHook


Module Contents
---------------

.. py:class:: DatadogHook(datadog_conn_id = 'datadog_default')

   Bases: :py:obj:`airflow.hooks.base.BaseHook`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Uses datadog API to send metrics of practically anything measurable.

   It's possible to track # of db records inserted/deleted, records read
   from file and many other useful metrics.

   Depends on the datadog API, which has to be deployed on the same server where
   Airflow runs.

   :param datadog_conn_id: The connection to datadog, containing metadata for api keys.


   .. py:attribute:: conn_name_attr
      :value: 'datadog_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'datadog_default'



   .. py:attribute:: conn_type
      :value: 'datadog'



   .. py:attribute:: hook_name
      :value: 'Datadog'



   .. py:attribute:: api_key


   .. py:attribute:: app_key


   .. py:attribute:: api_host


   .. py:attribute:: source_type_name


   .. py:attribute:: host


   .. py:method:: validate_response(response)

      Validate Datadog response.



   .. py:method:: send_metric(metric_name, datapoint, tags = None, type_ = None, interval = None)

      Send a single datapoint metric to Datadog.

      :param metric_name: The name of the metric
      :param datapoint: A single integer or float related to the metric
      :param tags: A list of tags associated with the metric
      :param type_: Type of your metric: gauge, rate, or count
      :param interval: If the type of the metric is rate or count, define the corresponding interval



   .. py:method:: query_metric(query, from_seconds_ago, to_seconds_ago)

      Query datadog for a metric, potentially with some function applied to it and return the result.

      :param query: The datadog query to execute (see datadog docs)
      :param from_seconds_ago: How many seconds ago to start querying for.
      :param to_seconds_ago: Up to how many seconds ago to query for.



   .. py:method:: post_event(title, text, aggregation_key = None, alert_type = None, date_happened = None, handle = None, priority = None, related_event_id = None, tags = None, device_name = None)

      Post an event to datadog (processing finished, potentially alerts, other issues).

      Think about this as a means to maintain persistence of alerts, rather than alerting itself.

      :param title: The title of the event
      :param text: The body of the event (more information)
      :param aggregation_key: Key that can be used to aggregate this event in a stream
      :param alert_type: The alert type for the event, one of
          ["error", "warning", "info", "success"]
      :param date_happened: POSIX timestamp of the event; defaults to now
      :handle: User to post the event as; defaults to owner of the application key used
          to submit.
      :param handle: str
      :param priority: Priority to post the event as. ("normal" or "low", defaults to "normal")
      :param related_event_id: Post event as a child of the given event
      :param tags: List of tags to apply to the event
      :param device_name: device_name to post the event with



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



